--- a/css/memory-game.css
+++ b/css/memory-game.css
@@ -4,5 +4,58 @@
 .container{
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/nba_background.jpg);
+    /* background-image: url(../img/nba_background.jpg);
+    background-size: cover; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 50vw;
+    margin-top: 5%;
+    margin-bottom: 20px;
+}
+.card{
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
+    margin-bottom: 10px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.card-row{
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    width: 40vw;
+}
+#wrong-answers{
+    /* color: white; */
+    font-size: 20px;
+    width: 33%;
+}
+.empty-space{
+    width: 33%;
+}
+.start{
+    width: 33%;
+    margin-left: 20%;
+}
+.card-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.start-button{
+    background-color: rgb(204, 8, 8);
+    color: white;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 8px;
+    font-size: 20px;
 }
