--- a/css/memory-game.css
+++ b/css/memory-game.css
@@ -1,10 +1,12 @@
 #body{
     margin: 0;
+    background-image: url(../img/background_image.jpg);
+    background-size: cover;
 }
 .container{
     height: 100vh;
     width: 100vw;
-    /* background-image: url(../img/nba_background.jpg);
+    /* background-image: url(../img/nba-logo-on-wood.jpg);
     background-size: cover; */
     display: flex;
     flex-direction: column;
@@ -20,24 +22,26 @@
     margin-bottom: 20px;
 }
 .card{
-    height: 100px;
-    width: 100px;
+    height: calc(100vh / 6);
+    width: calc(100vw / 8);
     border: 1px solid black;
     margin-bottom: 10px;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    cursor: pointer;
 }
 .card-row{
     justify-content: space-around;
     display: flex;
     align-items: center;
-    width: 40vw;
+    width: 75vw;
 }
 #wrong-answers{
-    /* color: white; */
+    color: white;
     font-size: 20px;
     width: 33%;
+    visibility: hidden;
 }
 .empty-space{
     width: 33%;
@@ -51,11 +55,77 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
-.start-button{
+#start-button{
     background-color: rgb(204, 8, 8);
     color: white;
     padding: 5px 15px;
     border: none;
     border-radius: 8px;
     font-size: 20px;
+}
+@media screen and (max-width: 576px){
+    .card{
+        height: calc(100vh / 5);
+        width: calc(100vw / 5);
+    }
+    .card-row{
+        width: 100vw;
+    }
+    #wrong-answers{
+        font-size: 18px;
+        width: 33%;
+    }
+    .start{
+        width: 33%;
+        margin-left: 8%;
+        margin-right: 20px;
+    }
+}
+.levels{
+    justify-content: space-around;
+    cursor: pointer;
+}
+.level:hover{
+    color: blue;
+}
+.level-selected{
+    color: blue;
+}
+.modal-title{
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+}
+.level{
+    font-size: 18px;
+}
+#mute{
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+}
+.img-container{
+    justify-content: start;
+    align-items: flex-end;
+    display: flex;
+    width: 100vw;
+    height: 100%;
+}
+.go-button-container{
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+}
+#win{
+    display: none;
+}
+#win-text-top{
+    font-size: 35px;
+    color: white;
+}
+#win-text-bottom{
+    font-size: 30px;
+    color: white;
 }
