--- a/css/memory-game.css
+++ b/css/memory-game.css
@@ -2,12 +2,11 @@
     margin: 0;
     background-image: url(../img/background_image.jpg);
     background-size: cover;
+    background-position: center;
 }
 .container{
     height: 100vh;
     width: 100vw;
-    /* background-image: url(../img/nba-logo-on-wood.jpg);
-    background-size: cover; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -15,27 +14,34 @@
 }
 #header{
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
-    width: 50vw;
-    margin-top: 5%;
+    width: 100vw;
+    margin-top: 3%;
     margin-bottom: 20px;
 }
 .card{
     height: calc(100vh / 6);
-    width: calc(100vw / 8);
+    width: calc(100vw / 7);
     border: 1px solid black;
     margin-bottom: 10px;
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-size: contain;
     cursor: pointer;
+    transition: transform .6s;
+    transform: rotateY(0deg);
+}
+.card-background{
+    background-image: url(../img/nba_card.png) !important;
+    background-size: cover;
+    transform: rotateY(180deg);
 }
 .card-row{
     justify-content: space-around;
     display: flex;
     align-items: center;
-    width: 75vw;
+    width: 90vw;
 }
 #wrong-answers{
     color: white;
@@ -56,17 +62,12 @@
     justify-content: space-evenly;
 }
 #start-button{
-    background-color: rgb(204, 8, 8);
-    color: white;
-    padding: 5px 15px;
-    border: none;
-    border-radius: 8px;
     font-size: 20px;
 }
 @media screen and (max-width: 576px){
     .card{
-        height: calc(100vh / 5);
-        width: calc(100vw / 5);
+        height: calc(100vh / 5.5);
+        width: calc(100vw / 6.3);
     }
     .card-row{
         width: 100vw;
@@ -74,11 +75,23 @@
     #wrong-answers{
         font-size: 18px;
         width: 33%;
+        transform: translateX(-18%);
     }
     .start{
         width: 33%;
         margin-left: 8%;
         margin-right: 20px;
+    }
+    #start-button{
+        padding: 5px 15px;
+        font-size: 17px;
+        transform: translateX(8%);
+    }
+    #header{
+        margin-top: 25px;
+    }
+    #win{
+        height: 150px;
     }
 }
 .levels{
@@ -120,6 +133,7 @@
 }
 #win{
     display: none;
+    height: 270px;
 }
 #win-text-top{
     font-size: 35px;
@@ -128,4 +142,25 @@
 #win-text-bottom{
     font-size: 30px;
     color: white;
+}
+#high-score-text {
+    color: white;
+    font-size: 27px;
+}
+.high-score{ 
+    color: white;
+    font-size: 22px;
+}
+#input-name{
+    display: none;
+    text-align: center;
+}
+#save-button{
+    margin-top: 10px;
+    display: none;
+}
+#save-text{
+    margin-top: 20px;
+    color: white;
+    font-size: 20px;
 }
