Mobile fix header

--- a/css/memory-game.css
+++ b/css/memory-game.css
@@ -177,6 +177,8 @@
     }
     #header{
         height: 5vh;
+        margin-top: 10%;
+        text-align: center;
     }
     .card{
         width: 30%;
