--- a/css/memory-game.css
+++ b/css/memory-game.css
@@ -173,12 +173,26 @@
 .col-score{
     border: 1px solid white;
     padding: 10px;
+    width: 10vw;
 }
 .row-score1{
     padding: 15px;
     border: 3px solid white;
 }
+@media screen and (max-width: 1200px) {
+    .col-score {
+        width: 15vw;
+    }
+}
+@media screen and (max-width: 768px) {
+    .col-score {
+        width: 20vw;
+    }
+}
 @media screen and (max-width: 576px){
+    .col-score {
+        width: 30vw;
+    }
     .img-container{
         height: 0;
     }
